--- a/web/style/Styles.css
+++ b/web/style/Styles.css
@@ -14,6 +14,7 @@
     -webkit-background-clip: text;
     color: snow;
     transition: all 0.3s ease-in-out;
+    text-decoration: none;
 }
 
 .nav-link:before {
@@ -31,10 +32,16 @@
 .nav-link:hover {
     background-position: 0;
     color: gold;
+    text-decoration: none;
 }
 
 .nav-link:hover::before {
     width:100%;
+}
+
+.loginBar{
+    position: absolute;
+    right: 56px;
 }
 
 .heading{
@@ -93,5 +100,9 @@
 .datepicker tfoot tr th:hover {
     background: #3A2218;
     color: #EAAA01;
+}
+
+.container{
+    display: inline;
 }
 
