--- a/web/style/Styles.css
+++ b/web/style/Styles.css
@@ -1,4 +1,23 @@
 
+#container{
+    width: 100vw;
+    height: 100vh;
+    background-color: #2c3034;
+    position: fixed;
+    z-index: 5;
+}
+
+#loader{
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
 main > section:nth-child(1) .nav-link {
     background-image: linear-gradient(
             to right,
