--- a/web/style/Styles.css
+++ b/web/style/Styles.css
@@ -4,7 +4,7 @@
     height: 100vh;
     background-color: #2c3034;
     position: fixed;
-    z-index: 5;
+    z-index: 6;
 }
 
 #loader{
@@ -123,5 +123,31 @@ main > section:nth-child(1) .nav-link:hover::before {
 
 .container{
     display: inline;
+}
+
+/*-------------------*/
+
+#login_page_container{
+    min-height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,.7);
+    background-size: cover;
+    transform: scale(0);
+    z-index: 6;
+}
+
+#ForgotPasswordPage{
+    min-height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,.7);
+    background-size: cover;
+    transform: scale(0);
+    z-index: 7;
 }
 
