--- a/web/style/Styles.css
+++ b/web/style/Styles.css
@@ -4,7 +4,7 @@
     height: 100vh;
     background-color: #2c3034;
     position: fixed;
-    z-index: 6;
+    z-index: 10;
 }
 
 #loader{
@@ -148,6 +148,18 @@ main > section:nth-child(1) .nav-link:hover::before {
     background-color: rgba(0,0,0,.7);
     background-size: cover;
     transform: scale(0);
-    z-index: 7;
+    z-index: 6;
+}
+
+#RegisterPage{
+    min-height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,.7);
+    background-size: cover;
+    transform: scale(0);
+    z-index: 6;
 }
 
