--- a/web/style/Styles.css
+++ b/web/style/Styles.css
@@ -1,9 +1,9 @@
 
 #container{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: #2c3034;
-    position: fixed;
+    position: relative;
     z-index: 10;
 }
 
