update admin panel adding side navigation

--- a/web/style/Styles.css
+++ b/web/style/Styles.css
@@ -171,6 +171,10 @@ main > section:nth-child(1) .nav-link:hover::before {
     }
 }
 
+#main-navbar {
+    position: fixed;
+}
+
 /* Sidebar */
 .sidebar {
     position: fixed;
@@ -196,12 +200,16 @@ main > section:nth-child(1) .nav-link:hover::before {
 }
 
 .sidebar-sticky {
-    position: relative;
+    position: fixed;
     top: 0;
     height: calc(100vh - 48px);
     padding-top: 0.5rem;
     overflow-x: hidden;
     overflow-y: auto;
     /* Scrollable contents if viewport is shorter than content. */
+}
+
+.list-group-item{
+    background-color: transparent;!important;
 }
 
