--- a/web/style/Styles.css
+++ b/web/style/Styles.css
@@ -213,3 +213,52 @@ main > section:nth-child(1) .nav-link:hover::before {
     background-color: transparent;!important;
 }
 
+/*---------------------*/
+#CarManagePage{
+    min-height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,.4);
+    background-size: cover;
+    transform: scale(0);
+    z-index: 7;
+}
+
+#DriverManagePage{
+    min-height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,.4);
+    background-size: cover;
+    transform: scale(0);
+    z-index: 7;
+}
+
+#ChangeDriver{
+    min-height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,.4);
+    background-size: cover;
+    transform: scale(0);
+    z-index: 7;
+}
+
+#PaymentAddPage{
+    min-height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,.4);
+    background-size: cover;
+    transform: scale(0);
+    z-index: 7;
+}
+
