--- a/web/style/Styles.css
+++ b/web/style/Styles.css
@@ -262,6 +262,18 @@ main > section:nth-child(1) .nav-link:hover::before {
     z-index: 7;
 }
 
+#ReserveDetailsPage{
+    min-height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,.4);
+    background-size: cover;
+    transform: scale(0);
+    z-index: 7;
+}
+
 /*-------*/
 #tblShowCars {
     border-collapse: separate;
